fixed gap and main img

--- a/pages/inclusive/inclusive.css
+++ b/pages/inclusive/inclusive.css
@@ -73,6 +73,7 @@ body > main > div > div > div:nth-child(6) > div > div.text{
     grid-template-columns: auto auto auto;
     background: #F7EFFC;
     padding: 2em;
+    margin: 0;
     width: auto;
     
 }
